# OTUS-CPP-2023-12

./: CMakeLists.txt  README.md
.github/workflows/: OTUS-CPP-2023-12.yml
src/cli/: helloworld.cpp
src/version/: version.cpp  version.test.cpp
